[project]
name = "amruta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.13.0",
    "ipykernel>=6.29.5",
    "polars>=1.12.0",
    "python-docx>=1.1.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.66.6",
    "xlsxwriter>=3.2.3",
]
